feat: Implement Basic Experiment Management UI
This commit introduces the foundational UI for managing experiments,
allowing growth practitioners to track, view, add, and update their experiments.

Key changes include:
- Refactored Next.js page structure to leverage file-system based routing.
- Created dedicated pages for listing all experiments, creating new experiments,
  and viewing/editing individual experiment details.
- Integrated existing ExperimentList, ExperimentForm, and ExperimentDetail components.
- Ensured API integration for fetching, creating, and updating experiments.
- Updated project metadata and navigation for a consistent user experience.

--- a/.shippy/config.yml
+++ b/.shippy/config.yml
@@ -1,9 +1,9 @@
 # Our Project Configuration
 
 # -- Project & Founder --
-cofounder_name: Chris
+cofounder_name: "Chris Davis"
 product_name: "GrowthLogs"
-elevator_pitch: "An automated analytics platform that turns raw user data into actionable product insights for indie hackers."
+elevator_pitch: "GrowthLogs helps growth practitioners track, manage, and learn from every experiment with ease, moving beyond messy spreadsheets to provide a centralized platform for clear hypotheses, real-time status updates, and actionable insights."
 
 # -- Technical Stack --
 language: typescript
